added screen recording demo of app

--- a/output/team.html
+++ b/output/team.html
@@ -25,26 +25,39 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Bob</h2>
-        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+        <h2 class="card-title">Steve</h2>
+        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 45</li>
-            <li class="list-group-item">Email: <a href="mailto:bob@work.com">bob@work.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/github.com/bob" target="_blank" rel="noopener noreferrer">github.com/bob</a></li>
+            <li class="list-group-item">ID: 66</li>
+            <li class="list-group-item">Email: <a href="mailto:steve@work.com">steve@work.com</a></li>
+            <li class="list-group-item">Office number: 66</li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">becky</h2>
+        <h2 class="card-title">Robert</h2>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 321</li>
+            <li class="list-group-item">Email: <a href="mailto:Robert@work.com">Robert@work.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/github.com/robert" target="_blank" rel="noopener noreferrer">github.com/robert</a></li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Becky</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 78</li>
-            <li class="list-group-item">Email: <a href="mailto:becky@work.com">becky@work.com</a></li>
+            <li class="list-group-item">ID: 987</li>
+            <li class="list-group-item">Email: <a href="mailto:Becky@work.com">Becky@work.com</a></li>
             <li class="list-group-item">School: Clemson</li>
         </ul>
     </div>
